codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__replayed_grouped_viewed_images.snap
---
source: tui/src/chatwidget/tests/tool_flow.rs
expression: "lines_to_single_string(&cells[0])"
---
• Viewed Images
  └ first.png
    second.png
