codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__replayed_grouped_web_search.snap
---
source: tui/src/chatwidget/tests/tool_flow.rs
expression: "lines_to_single_string(&cells[0])"
---
• Searched the web
  └ Search rust ratatui wrapping
    Open a web page
