codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__review_capacity_error_exit_allows_restart.snap
---
source: tui/src/chatwidget/tests/review_mode.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---









  Select a review preset


› 1. Review against a base branch  (PR Style)                                   
  2. Review uncommitted changes
  3. Review a commit
  4. Custom review instructions

  enter select · esc back
